edit file swagger.json
